// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValueButton /> should handle click event 1`] = `
<button
  aria-checked={false}
  className="css-ssdcv1"
  data-test-id="someid"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  role="checkbox"
  type="button"
  value="someid"
>
  somelabel
</button>
`;

exports[`<ValueButton /> should render as active 1`] = `
<button
  aria-checked={true}
  className="css-1h48rjj"
  data-test-id="someid"
  onClick={[Function]}
  role="checkbox"
  type="button"
  value="someid"
>
  somelabel
</button>
`;

exports[`<ValueButton /> should render as inactive 1`] = `
<button
  aria-checked={false}
  className="css-ssdcv1"
  data-test-id="someid"
  onClick={[Function]}
  role="checkbox"
  type="button"
  value="someid"
>
  somelabel
</button>
`;
